# spankurlaptop

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  spankurlaptop.py
spankurlaptop/: __init__.py  __main__.py
